[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Game/TopBar.gd" type="Script" id=2]
[ext_resource path="res://Fuentes/BigFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Visuales/Population/PopulationBar.png" type="Texture" id=4]
[ext_resource path="res://Visuales/Population/IconInfo.png" type="Texture" id=5]
[ext_resource path="res://Visuales/Population/IconInfoPressed.png" type="Texture" id=6]
[ext_resource path="res://Visuales/Population/IconInfoHover.png" type="Texture" id=7]
[ext_resource path="res://Escenas/StatsMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Escenas/Information.tscn" type="PackedScene" id=9]
[ext_resource path="res://Audio/The End of Pandemic by TAD.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "NewDay"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("NewDayScreen:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 1.5, 3.5, 3.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 224 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -224 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NewDayScreen/Today:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 256, 0 ), Vector2( 256, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NewDayScreen/Yesterday:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -256, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MainContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 224 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BGMusic:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -30.0, -40.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NewDayScreen:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 224 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -224 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MainContainer" type="VBoxContainer" parent="."]
margin_right = 256.0
margin_bottom = 224.0
rect_min_size = Vector2( 256, 224 )
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="HBoxContainer" parent="MainContainer"]
editor/display_folded = true
margin_right = 256.0
margin_bottom = 18.0
alignment = 1
script = ExtResource( 2 )

[node name="Label" type="Label" parent="MainContainer/TopBar"]
margin_left = 1.0
margin_top = 1.0
margin_right = 129.0
margin_bottom = 17.0
rect_min_size = Vector2( 128, 16 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.972549, 0.933333, 0.74902, 1 )
text = "Sanos: 100%"
align = 1

[node name="Bar" type="TextureRect" parent="MainContainer/TopBar"]
margin_left = 133.0
margin_right = 233.0
margin_bottom = 18.0
rect_min_size = Vector2( 100, 0 )
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Rect" type="ColorRect" parent="MainContainer/TopBar/Bar"]
margin_left = 98.0
margin_top = 4.0
margin_right = 98.0
margin_bottom = 14.0
rect_scale = Vector2( -1, 1 )
color = Color( 0.141176, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="TextureButton" parent="MainContainer/TopBar"]
margin_left = 237.0
margin_right = 255.0
margin_bottom = 18.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="StatsMenu" parent="MainContainer" instance=ExtResource( 8 )]

[node name="Information" parent="MainContainer" instance=ExtResource( 9 )]

[node name="NewDayScreen" type="ColorRect" parent="."]
editor/display_folded = true
margin_top = -224.0
margin_right = 256.0
margin_bottom = 0.000457764
color = Color( 0.141176, 0.156863, 0.156863, 1 )

[node name="Yesterday" type="Label" parent="NewDayScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -112.0
margin_right = 3.05176e-005
margin_bottom = 0.999695
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "Comienza la cuarentena"
align = 1
valign = 1
autowrap = true

[node name="Today" type="Label" parent="NewDayScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 128.0
margin_top = -112.0
margin_right = 256.001
margin_bottom = -0.000305176
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
text = "Day 0"
align = 1
valign = 1
autowrap = true

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
autoplay = "NewGame"
anims/NewDay = SubResource( 1 )
anims/NewGame = SubResource( 2 )

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -40.0
autoplay = true
[connection signal="finished" from="BGMusic" to="." method="BGMusicFinished"]
